Fix error in ebpf program and add input.txt for day2/p1

--- a/day2/p1/Makefile
+++ b/day2/p1/Makefile
@@ -29,5 +29,5 @@ clean:
 example:
 	sudo uv run --project feed/ feed/feed.py < example.txt
 
-# input:
-	# python3 feed.py < input.txt
+input:
+	sudo uv run --project feed/ feed/feed.py < input.txt
